# refined

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: refined.hpp
include/refined/: refined.hpp
include/refined/compile_time/: string.hpp
include/refined/validator/: comparable.hpp  container.hpp  pipe.hpp
include/refined/validator/core/: and.hpp  not.hpp  or.hpp  validator.hpp
test/: test.cpp
test/dynamic/: equal_to.cpp
test/static/: equal_to.cpp  greater_than.cpp  less_than.cpp
